--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,5 @@
   <nz-content>
     <router-outlet></router-outlet>
   </nz-content>
-  <nz-footer>CSGI ©2023 Implement By Customer Connect Team</nz-footer>
+  <nz-footer>CSGI ©2023 Implemented by Customer Connect Team</nz-footer>
 </nz-layout>
