--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+html { height: 100%; }
+
+body { min-height: 100%; }
 
 .container {
   margin: 0;
@@ -55,7 +58,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  color: #0f0f0f;
   background-color: #ffffff;
   transition: border-color 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
